Increasing title margin a little, which avoids overlap in mobile phones.

--- a/style.scss
+++ b/style.scss
@@ -39,7 +39,7 @@ img.stretch {
 header {
     cursor: default;
     margin-top: 10px;
-    margin-left: 120px;
+    margin-left: 130px;
     margin-bottom: 40px;
 }
 
